# simple-ytdl

./: .gitignore  README.md  convtotxt.py  ejscriptsdownload.txt  error_log.txt  hello.py  inspect_flet.py  pyproject.toml  requirements.txt  run_wrapper.py  test.py
.github/workflows/: build.yaml
src/: main.py  mcp_start.ps1
src/yt/: download.py  showdetails.py
