[project]
name = "simple-ytdl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "diamondosazuwa@gmail.com" }
]
dependencies = [
  "flet>=0.80.1",
  "pytubefix",
  "ffmpeg-python"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]

[tool.flet]
org = "com.mycompany"
product = "simple-ytdl"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"
